# cargo-rocket-docker

./: .gitignore  Cargo.toml  LICENSE  public.readme.md  readme.md
gary/: Dockerfile
src/: config.rs  main.rs  template.rs
templates/: Dockerfile.hbs
