[package]
name = "cargo-rocket-docker"
version = "0.1.4"
authors = ["Gary Ascuy <gary.ascuy@gmail.com>"]
edition = "2018"
repository = "https://github.com/Gary-Ascuy/cargo-rocket-docker.git"
description = "WIP: A cargo subcommand to create docker image from Rocket project"
readme = "public.readme.md"
license = "MIT"

[dependencies]
handlebars = "3.0.1"
serde_json = "1.0.53"
serde = "1.0.110"
toml = "0.5.6"
serde_derive = "1.0.110"

[dev-dependencies]
cargo-watch = "7.3.0"
cargo-edit = "0.6.0"

[docker]
name = 'server'
version = '1.6.6'
maintainer = 'fromfile<file@from.com>'
tag = "garyascuy/server"
tags = [
    "garyascuy/server:1.0.0",
    "garyascuy/server:latest",
]

[docker.packages]
build = "imagemagick"
image = "gary"
