[package]
name = "cargo-rocket-docker"
version = "0.2.1"
authors = ["Gary Ascuy <gary.ascuy@gmail.com>"]
edition = "2018"
categories = ["development-tools"]
keywords = ["cargo-subcommand", "cargo", "docker", "rocket", "tool"]
repository = "https://github.com/Gary-Ascuy/cargo-rocket-docker.git"
description = "WIP: Docker subcommand to create docker image for Rocket projects"
readme = "public.readme.md"
license = "MIT"

[dependencies]
handlebars = "3.0.1"
serde_json = "1.0.53"
serde = "1.0.110"
toml = "0.5.6"
serde_derive = "1.0.110"
clap = "2.33.1"
atty = { version = "0.2.14", optional = true }
structopt = { version = "0.3.14", optional = true }
colored = "1.9.3"

[dev-dependencies]
cargo-watch = "7.3.0"
cargo-edit = "0.6.0"

[[bin]]
name = "cargo-docker"
path = "src/main.rs"
required-features = ["docker"]

[features]
default = ["docker"]
docker = ["cli"]
cli = ["atty", "structopt"]

[docker]
name = 'server'
version = '1.6.6'
maintainer = 'fromfile<file@from.com>'
tempFolder = "./tmp"
tag = "garyascuy/server"
tags = [
    "garyascuy/server:1.0.0",
    "garyascuy/server:latest",
    "registry.gitlab.com/project/group/user/server:latest",
]

[docker.packages]
build = "imagemagick"
image = "gary"
