[package]
name = "cargo-rocket-docker"
version = "1.0.0"
authors = ["Gary Ascuy <gary.ascuy@gmail.com>"]
edition = "2018"
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
keywords = ["cargo-subcommand", "cargo", "docker", "rocket", "tool"]
repository = "https://github.com/Gary-Ascuy/cargo-rocket-docker.git"
description = "Cargo sub-command tool for docker images into Rocket projects"
readme = "public.readme.md"
license = "MIT"
license-file = "LICENSE"

[dependencies]
handlebars = "3.0.1"
serde_json = "1.0.53"
serde = "1.0.110"
toml = "0.5.6"
serde_derive = "1.0.110"
clap = "2.33.1"
atty = { version = "0.2.14", optional = true }
structopt = { version = "0.3.14", optional = true }
colored = "1.9.3"

[dev-dependencies]
cargo-watch = "7.3.0"
cargo-edit = "0.6.0"

[[bin]]
name = "cargo-docker"
path = "src/main.rs"
required-features = ["docker"]

[features]
default = ["docker"]
docker = ["cli"]
cli = ["atty", "structopt"]

[docker]
name = "cargo-rocket-docker"
version = "1.0.0"
maintainer = "Gary Ascuy <gary.ascuy@gmail.com>"
temp_folder = "./.tmp_docker"
tag = "garyascuy/cargo-rocket-example"
custom_tags = [
    "registry.gitlab.com/garyascuy:latest",
    "registry.gitlab.com/garyascuy:1.0.0",
]

[docker.packages]
build = "acf-openssl"
image = "imagemagick second-pkg other-pkg"
